# fastapi_url_shortener

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
scripts/: db_init.sh
src/: config.py  database.py  main.py
src/url_shortner/: comtrollers.py  models.py  repository.py  routes.py  schemas.py
tests/integration/: conftest.py  test_url_shortner.py
tests/url_shortner/: conftest.py
tests/url_shortner/integration/: test_routes.py
tests/url_shortner/unit/: test_controllers.py
