[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = ""
authors = ["Gheorghe Mirca"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.3"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
pytest = "^8.0.2"
httpx = "^0.27.0"
mypy = "^1.8.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pytest-postgresql = "^5.1.0"
pytest-asyncio = "0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
gevent = "^24.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "-vv -x -p no:warnings"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
concurrency = ["gevent"]
